name:                graphite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alx741/graphite#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx741@riseup.net
copyright:           2017 Daniel Campoverde
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.Types
                     , Data.Graph.Graph
                     , Data.Graph.DGraph
                     , Data.Graph.Connectivity
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , unordered-containers
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010

executable graphite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , graphite
  default-language:    Haskell2010

test-suite graphite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphite
                     , hspec
                     , QuickCheck
  other-modules:       Data.Graph.TypesSpec
                     , Data.Graph.DGraphSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alx741/graphite
