name:                graphite
version:             0.2.1.0
synopsis:            Graphs and networks library
description:         Represent, analyze and visualize graphs
homepage:            https://github.com/alx741/graphite#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx@sillybytes.net
copyright:           2017 Daniel Campoverde
category:            Data Structures, Graphs
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.Types
                     , Data.Graph.UGraph
                     , Data.Graph.DGraph
                     , Data.Graph.Generation
                     , Data.Graph.Visualize
                     , Data.Graph.Connectivity
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , random
                     , process
                     , graphviz
                     , unordered-containers
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite graphite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphite
                     , hspec
                     , QuickCheck
  other-modules:       Data.Graph.TypesSpec
                     , Data.Graph.DGraphSpec
                     , Data.Graph.UGraphSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alx741/graphite
